--- a/public/cliente.html
+++ b/public/cliente.html
@@ -22,7 +22,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav" id="barra-menu">
-        <li><a onclick=widgetCanciones()>Canciones</a></li>
+        <li><a onclick=widgetOfertas()>Ofertas</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" id="barra-menu-derecha">
         <!-- Opciones de menú aqui -->
@@ -39,8 +39,12 @@
 
 <script>
   let token;
-  let URLbase = "https://localhost:8081/api";
+  let URLbase = "http://localhost:8081/api";
   $( "#contenedor-principal" ).load( "widget-login.html");
+
+  function widgetOfertas() {
+    $("#contenedor-principal").load("widget-ofertas.html");
+  }
 </script>
 
 </body>
