--- a/public/widget-ofertas.html
+++ b/public/widget-ofertas.html
@@ -5,7 +5,7 @@
     <tr>
       <th>Título</th>
       <th>Detalle</th>
-      <th>Precio</th>
+      <th>Precio (€)</th>
       <th>Vendedor</th>
       <th class="col-md-1"></th>
     </tr>
