--- a/public/widget-chat.html
+++ b/public/widget-chat.html
@@ -14,6 +14,18 @@
 
         </tbody>
     </table>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="mensaje">Mensaje:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="mensaje"
+                   placeholder="Escribe aqui tu mensaje" id="mensaje" />
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="button" id="boton-send">Enviar</button>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -21,9 +33,11 @@
     var mensajes;
     function cargarMensajes() {
         $.ajax({
-            url: URLbase + "/chat" + idOfertaSeleccionada,
+            url: URLbase + "/chat/mensajes" + idOfertaSeleccionada,
             type: "GET",
-            data: {},
+            data: {
+                ofertaId : idOfertaSeleccionada,
+            },
             dataType: 'json',
             headers: { "token": token},
             success: function (respuesta) {
@@ -31,10 +45,30 @@
                 actualizarTabla(mensajes);
             },
             error : function (error) {
-                $( "#contenedor-principal").load("widget-login");
+                $( "#contenedor-principal").load("widget-ofertas");
             }
         });
     }
+
+    $("#boton-send").click(function (){
+        console.log("aqui entra");
+        $.ajax({
+            url: URLbase + "/chat/mensajes",
+            type: "POST",
+            data: {
+                mensaje: $("#mensaje").val(),
+            },
+            dataType: 'json',
+            success: function (respuesta) {
+                console.log(respuesta.token);
+                token=respuesta.token;
+                cargarMensajes();
+            },
+            error:function (error) {
+                $("#widget-login").prepend("<div class='alert alert-danger'>Error al enviar mensaje</div>");
+            }
+        });
+    });
 
     function actualizarTabla(mensajesMostrar) {
         $("#tablaCuerpo").empty();
