--- a/public/widget-ofertas.html
+++ b/public/widget-ofertas.html
@@ -22,7 +22,7 @@
   var ofertas;
   function cargarOfertas(){
     $.ajax({
-      url: URLbase + "/ofertas",//TODO: no mostrar ofertas propias
+      url: URLbase + "/ofertas",
       type: "GET",
       data: { },
       dataType: 'json',
